added social icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
             <nav class="footer-nav">
               <ul>
                 <li><a href="http://www.levimcg.com">&copy;Levi McGranahan</a></li>
-                <li><a href="http://creativecommons.org/licenses/by-nc/4.0/">License</a></li>
-                <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages">Source</a></li>
+                <li><a href="http://www.twitter.com/levimcg" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="http://www.instagram.com/levimcg" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages" target="_blank"><i class="fa fa-github"></i></a></li>
               </ul>
             </nav>
           </div>
