--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -6,7 +6,7 @@
 
 .site-header {
   @extend %clearfixer;
-  padding: .75em 0 .5em 0;
+  padding: 1em 0 .5em 0;
   background-color: $color-brand-primary;
   font-weight: 300;
 
@@ -30,6 +30,9 @@
 }
 
 .logo {
+  width: 50px;
+  height: 50px;
+  margin-bottom: .4em;
   float: left;
 
   h1 {
@@ -38,7 +41,6 @@
 
   a {
     display: inline-block;
-    padding-top: 1.25em;
     font-weight: 700;
   }
 }
@@ -61,7 +63,7 @@ ul.menu {
     
     a {
       display: inline-block;
-      padding: .5em;
+      padding: .5em .7em;
 
         &:hover {
           color: $color-brand-secondary;
@@ -137,7 +139,7 @@ i.fa-bars {
  .main-nav nav {
     width: 70%;
     position: absolute;
-    left: -70%;
+    right: -70%;
     top: 0;
     height: 100%;
     background: darken($color-brand-primary, 6%);
@@ -173,23 +175,23 @@ i.fa-bars {
   }
 
   .open-panel {
-    float: left;
-    margin-right: 2em;
+    float: right;
+    // margin-right: 1em;
   }
   
   .close-panel {
     position: relative;
-    top: .5em;
+    top: .85em;
     left: 1em;
   }
 
   .openNav #page {
-    left: 0;
-    -webkit-transform: translate3d(70%, 0, 0);
-    -moz-transform: translate3d(70%, 0, 0);
-    -ms-transform: translate3d(70%, 0, 0);
-    -o-transform: translate3d(70%, 0, 0);
-    transform: translate3d(70%, 0, 0);
+    right: 0;
+    -webkit-transform: translate3d(-70%, 0, 0);
+    -moz-transform: translate3d(-70%, 0, 0);
+    -ms-transform: translate3d(-70%, 0, 0);
+    -o-transform: translate3d(-70%, 0, 0);
+    transform: translate3d(-70%, 0, 0);
     -webkit-transition: -webkit-transform 400ms ease;
     -moz-transition: -moz-transform 400ms ease;
     -o-transition: -o-transform 400ms ease;
@@ -198,7 +200,7 @@ i.fa-bars {
   
   /* When the panel is closed, transition the page back to the left */
   #page {
-    left: 0;
+    right: 0;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
