--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="http://cdn.foundation5.zurb.com/foundation.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-ipad.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-retina.png">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src"http://cdn.foundation5.zurb.com/foundation.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
