updating some styles

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -9,6 +9,7 @@
 @import "components/header";
 @import "components/intro";
 @import "components/recipe-list";
+@import "components/internal-page";
 @import "components/article";
 @import "components/recipe-archive";
 @import "components/footer";
