--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -1,6 +1,10 @@
 .post-page {
   margin-bottom: 3em;
   padding-top: 1.5em;
+}
+
+.post-header {
+  padding-top: 2em;
 
     h1 {
       margin-bottom: .5em;
@@ -10,53 +14,6 @@
       line-height: 1.2;
     }
 
-    h2 {
-      margin: 1em 0 .5em 0;
-      font-size: 1.75em;
-      font-weight: 700;
-      letter-spacing: -.03em;
-    }
-
-    h3 {
-      margin: 1em 0 .5em 0;
-      font-size: 1.25em;
-      font-weight: 700;
-    }
-
-    ul {
-      margin-left: 1.1em;
-      list-style-type: disc;
-
-        li {
-          margin-bottom: .5em;
-        }
-    }
-
-    ol {
-      margin-left: 1.1em;
-      list-style-type: decimal;
-
-        li {
-          padding: 1em 0;
-
-            &:first-child {
-              padding-top: 0;
-            }
-        }
-    }
-
-    strong {
-      font-weight: 700;
-    }
-
-    em {
-      font-style: italic;
-    }
-}
-
-.post-header {
-  padding-top: 2em;
-
     .post-description {
       font-weight: 300;
       letter-spacing: -.025em;
@@ -64,9 +21,11 @@
 }
 
 .post-description {
-  margin-bottom: 1em;
-  font-size: 2em;
-  line-height: 1.2;
+  p {
+    margin-bottom: 0;
+    font-size: 2em;
+    line-height: 1.2;
+  }
 }
 
 .time {
@@ -105,17 +64,5 @@ i.fa-chevron-right {
     p {
       margin-bottom: 0;
     }
-  }
-}
-
-@include responsive(50em) {
-  .recipe-instructions {
-      p, ul, ol {
-        font-size: 18px;
-      }
-  }
-
-  .article-nav {
-    font-size: .8125em;
   }
 }
