--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -34,15 +34,6 @@
   height: 50px;
   margin-bottom: .4em;
   float: left;
-
-  h1 {
-    line-height: 0;
-  }
-
-  a {
-    display: inline-block;
-    font-weight: 700;
-  }
 }
 
 #content {
@@ -63,7 +54,8 @@ ul.menu {
     
     a {
       display: inline-block;
-      padding: .5em .7em;
+      padding: .5em .5em;
+      font-size: .8125em;
 
         &:hover {
           color: $color-brand-secondary;
@@ -87,6 +79,10 @@ ul.menu {
 }
 
 .archive-page .archive-nav {
+  color: $color-brand-secondary;
+}
+
+.about-page .about-nav {
   color: $color-brand-secondary;
 }
 
