--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
             <ul class="menu">
               <li><a class="home-nav" href="/"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-bolt"></i></span>Latest Recipes</a></li>
               <li><a class="archive-nav" href="/archive"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-archive"></i></span>Archive</a></li>
-              <!-- <li><a class="about-nav" href="#"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-spoon"></i></span>About</a></li> -->
+              <li><a class="about-nav" href="/about"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-spoon"></i></span>About</a></li>
               <li><a href="https://github.com/levimcg/recipe-book/tree/gh-pages" target="_blank"><span style="margin-right: .85em; color: rgba(255, 255, 255, .5);"><i class="fa fa-github"></i></span>Source on Github</a></li>
             </ul>
           </nav>
