updated type styles

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -7,6 +7,7 @@
     h1 {
       font-size: 3em;
       font-weight: 700;
+      letter-spacing: -.03em;
       color: $color-brand-secondary;
     }
 
