--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -30,8 +30,8 @@
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   margin-bottom: .4em;
   float: left;
 }
@@ -54,7 +54,7 @@ ul.menu {
     
     a {
       display: inline-block;
-      padding: .5em .5em;
+      padding: .9em .5em .5em .5em;
       font-size: .8125em;
 
         &:hover {
