--- a/_sass/components/_internal-page.scss
+++ b/_sass/components/_internal-page.scss
@@ -1,5 +1,5 @@
 .content {
-  padding-top: 3em;
+  padding: 3em 0 1.5em 0;
 
     h2 {
       margin: 1em 0 .5em 0;
@@ -42,6 +42,10 @@
 
     em {
       font-style: italic;
+    }
+
+    img {
+      margin-bottom: 1.5em;
     }
 }
 
