--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ i.fa-bars {
   color: #546fa8;
 }
 
-@media only screen and (max-width: 50em) {
+@media screen and (max-width: 50em) {
   #content {
     padding-top: 0;
   }
@@ -396,6 +396,8 @@ i.fa-bars {
 }
 @media screen and (max-width: 40.63em) {
   .logo {
+    width: 40px;
+    height: 40px;
     padding-top: 0;
   }
 }
