text alignment on intro

--- a/_sass/components/_intro.scss
+++ b/_sass/components/_intro.scss
@@ -18,6 +18,10 @@
     }
 }
 
+.internal {
+  text-align: center;
+}
+
 .text-center {
   text-align: center;
 }
@@ -25,7 +29,6 @@
 @include responsive(40.063em) {
   .intro {
     padding: .65em 0 2.5em 0;
-    text-align: center;
 
       h1 {
         line-height: 1;
