--- a/_layouts/internal-page.html
+++ b/_layouts/internal-page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<section class="intro">
+<section class="internal intro">
   <div class="row">
-    <div class="large-8 small-centered columns text-center">
+    <div class="large-8 medium-centered columns">
       <h1>{{ page.title }}</h1>
       <p>{{ page.tagline }}</p>
     </div>
