--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -9,6 +9,7 @@
   padding: 1em 0 .5em 0;
   background-color: $color-brand-primary;
   font-weight: 300;
+  font-family: $heading-font-family;
 
   a {
     color: $color-background;
