--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -1,5 +1,5 @@
 $base-font-size: 18px;
-$base-font-family: "jaf-bernino-sans", "Helvetica Neue", "Helvetica", Arial, sans-serif;
+$base-font-family: "chaparral-pro", "Helvetica Neue", "Helvetica", Arial, sans-serif;
 $base-font-weight: 400;
 
 $heading-font-family: "jaf-bernino-sans", "Helvetica Neue", "Helvetica", Arial, sans-serif;
