update time color

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -40,6 +40,10 @@
     }
 }
 
+.time .bold {
+  color: $color-brand-secondary;
+}
+
 i.fa-chevron-left {
   margin-right: 1em;
   color: $color-brand-secondary;
