--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post-page">
   <header class="post-header">
     <div class="row">
-      <div class="large-10 medium-10 medium-centered columns">
+      <div class="medium-8 medium-push-4 columns">
         <h1>{{ page.title }}</h1>
         <div class="post-description">
           <p>{{ page.description }}</p>
@@ -16,21 +16,25 @@ layout: default
   <section class="content">
     <article>
       <div class="row">
-        <div class="large-7 medium-10 medium-centered columns">
-          <div class="time-wrapper">
-            <div class="time">
-              <p>Prep time: <span class="bold">{{ page.prep }}</span></p>
+        <div class="medium-9 medium-centered columns">
+          <div class="row">
+            <div class="medium-4 columns">
+              <div class="overview">
+                <h2>Overview</h2>
+                <div class="post-meta">
+                  <p>Prep time: <span class="bold">{{ page.prep }}</span></p>
+                </div>
+                <div class="post-meta">
+                  <p>Cook time: <span class="bold">{{ page.cook }}</span></p>
+                </div>
+                <div class="post-meta"><p>Categories: <span class="bold">{{ page.categories }}</span></p></div>
+              </div>
             </div>
-            <div class="time">
-              <p>Cook time: <span class="bold">{{ page.cook }}</span></p>
+            <div class="medium-8 columns article-content">
+              {{ content }}
+              {% include article-nav.html %}
             </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="large-7 medium-10 medium-centered columns">
-          {{ content }}
-          {% include article-nav.html %}
         </div>
       </div>
     </article>
