--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -4,7 +4,7 @@
 }
 
 .post-header {
-  padding-top: 2em;
+  padding-top: 1em;
 
     h1 {
       margin-bottom: .5em;
@@ -32,27 +32,22 @@
 .post-meta {
   font-family: $heading-font-family;
 
-    p {
-      margin-bottom: 0;
-      color: $color-quiet;
-    }
-}
-
-.post-meta .bold {
-  color: $color-brand-secondary;
-}
-
-.overview {
-  font-size: .8125em;
-
-    h2 {
-      margin-top: 0;
-    }
-
     ul {
       list-style-type: none;
-      margin-left: 0;
+      margin: 0;
+
+        li {
+          font-size: .8125em;
+          margin: 0;
+          line-height: 2;
+
+            span {
+              font-weight: 700;
+              color: $color-brand-secondary;
+            }
+        }
     }
+
 }
 
 .article-content h2:first-of-type {
