implementing search and new layout

--- a/_layouts/internal-page.html
+++ b/_layouts/internal-page.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="internal intro">
   <div class="row">
-    <div class="large-8 medium-centered columns">
+    <div class="large-8 columns">
       <h1>{{ page.title }}</h1>
       <p>{{ page.tagline }}</p>
     </div>
