--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
   {% include footer.html %}
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script type="text/javascript" src="/js/listjs-min.js"></script>
 <script type="text/javascript" src="/js/script.js"></script>
   
 <script>
