--- a/_sass/components/_recipe-archive.scss
+++ b/_sass/components/_recipe-archive.scss
@@ -24,6 +24,11 @@
     &:last-child {
       margin-bottom: 3em;
     }
+
+    p {
+      margin-bottom: 0;
+      color: $color-quiet;
+    }
   }
 }
 
