--- a/css/style.scss
+++ b/css/style.scss
@@ -14,4 +14,5 @@
 @import "components/internal-page";
 @import "components/article";
 @import "components/recipe-archive";
+@import "components/search";
 @import "components/footer";
