--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="post-page">
   <header class="post-header">
     <div class="row">
-      <div class="medium-12 columns">
+      <div class="medium-10 medium-centered columns">
         <h1>{{ page.title }}</h1>
         <div class="post-description">
           <p>{{ page.description }}</p>
