--- a/_sass/components/_recipe-archive.scss
+++ b/_sass/components/_recipe-archive.scss
@@ -11,7 +11,7 @@
   h3 {
     font-size: 1.5em;
     font-weight: 700;
-    margin: 0;
+    margin: 0 0 .3em;
     line-height: 1;
   }
 
@@ -30,5 +30,25 @@
       color: $color-quiet;
     }
   }
+}
+
+.archive-meta {
+
+    span {
+      display: block;
+    }
+}
+
+.post-date, .post-category {
+  font-size: .8em;
+}
+
+.post-date {
+  color: $color-quiet;
+}
+
+.post-category {
+  color: $color-brand-secondary;
+  font-weight: 700;
 }
 
