added some bottom margin to archive meta

--- a/_sass/components/_recipe-archive.scss
+++ b/_sass/components/_recipe-archive.scss
@@ -39,6 +39,12 @@
     }
 }
 
+@include responsive(40.064em) {
+  .archive-meta {
+    margin-bottom: 1em;
+  }
+}
+
 .post-date, .post-category {
   font-size: .8em;
 }
