Added css build tasks

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,334 +1,11 @@
-:root {
-  --font-sans: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-serif: 'Source Serif Pro', serif;
-  --color-text: #192948;
-  --color-ruler: #d0dbdb;
-  --color-accent: #e70000;
-  --color-background: #f8ffff;
-  
-  --ratio: 1.2;
-  --s-3: calc(var(--s-2) / var(--ratio));
-  --s-2: calc(var(--s-1) / var(--ratio));
-  --s-1: calc(var(--s0) / var(--ratio));
-  --s0: 1rem;
-  --s1: calc(var(--s0) * var(--ratio));
-  --s2: calc(var(--s1) * var(--ratio));
-  --s3: calc(var(--s2) * var(--ratio));
-  --s4: calc(var(--s3) * var(--ratio));
-  --s5: calc(var(--s4) * var(--ratio));
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 100%;
-}
-
-@media screen and (min-width: 900px) {
-  html {
-    font-size: 115%;
-  }
-}
-
-body {
-  background-color: var(--color-background);
-  color: var(--color-text);
-  font-family: var(--font-sans);
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-  
-  background-repeat: no-repeat;
-  background-size: 65%;
-  background-position: top right;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-serif);
-  font-weight: 700;
-}
-
-h1 {
-  font-size: var(--s5)
-}
-
-h2 {
-  font-size: var(--s4);
-}
-
-h3 {
-  font-size: var(--s3);
-}
-
-h4 {
-  font-size: var(--s2);
-}
-
-h5 {
-  font-size: var(--s1);
-}
-
-h6 {
-  font-size: var(--s0);
-}
-
-img {
-  width: 100%;
-  display: block;
-}
-
-.wrapper {
-  max-width: 50rem;
-  padding: var(--s1);
-  margin: 0 auto;
-}
-
-.plain-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.recipe-list > li {
-  margin-top: 1rem;
-}
-
-.teaser__title {
-  margin-bottom: 0;
-  line-height: 1.1;
-  font-size: var(--s4);
-}
-
-.teaser__title a {
-  text-decoration: none;
-  color: var(--color-text);
-}
-
-.teaser__title a:hover {
-  text-decoration: underline;
-}
-
-.teaser__text {
-  margin-top: .5rem;
-  margin-bottom: 0;
-  font-size: var(--s1);
-}
-
-.teaser__tags {
-  display: flex;
-  margin-top: .25rem;
-}
-
-.teaser__tags li{
-  color: var(--color-accent);
-}
-
-.teaser__tags li:not(:first-child) {
-  margin-left: 1rem;
-  color: var(--color-accent);
-}
-
-.recipe-layout {
-  padding: 0 var(--s1);
-}
-
-.recipe-content > * + * {
-  margin-top: 1.5rem;
-}
-
-.recipe-content h2,
-.recipe-content h3,
-.recipe-content h4,
-.recipe-content h5,
-.recipe-content h6 {
-  font-size: var(--s2);
-}
-
-.recipe-content a {
-  color: var(--color-accent);
-}
-
-.recipe-content h2:first-of-type {
-  margin-top: 0;
-}
-
-.recipe-content ol {
-  padding-left: 1rem;
-}
-
-.recipe-content ol li {
-  margin-top: 1.5rem;
-}
-
-.recipe-meta dl {
-  margin-top: var(--s3);
-}
-
-.recipe-meta dt:not(:first-child) {
-  margin-top: var(--s2);
-}
-
-.recipe-meta dd {
-  margin: 0;
-  font-size: var(--s-1);
-}
-
-.recipe-label {
-  font-weight: 700;
-  font-size: var(--s-1);
-  font-family: var(--font-sans);
-  text-transform: uppercase;
-  letter-spacing: .05rem;
-}
-
-.recipe-ingredients {
-  padding: 0;
-  list-style: none;
-}
-
-.recipe-ingredients li {
-  position: relative;
-  padding-left: 1rem;
-  font-size: var(--s-1);
-}
-
-.recipe-ingredients li:not(:first-child) {
-  margin-top: calc(var(--s0) * .75);
-}
-
-.recipe-ingredients li::before {
-  display: block;
-  position: absolute;
-  top: .5rem;
-  left: 0;
-  margin-right: .75rem;
-  border-radius: 999rem;
-  content: "";
-  width: .35rem;
-  height: .35rem;
-  background-color: var(--color-ruler);
-}
-
-.recipe-header__title {
-  margin-bottom: 0;
-  line-height: 1.2;
-}
-
-.recipe-header__description {
-  margin-top: var(--s-3);
-  font-size: var(--s2);
-}
-
-.recipe-header__illo {
-  margin-bottom: var(--s4);
-}
-
-@media screen and (min-width: 740px) {
-  .recipe-layout {
-    max-width: 1140px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 340px 1fr;
-    grid-column-gap: var(--s5);
-    grid-row-gap: calc(var(--s5) * 1.5);
-  }
-  
-  .recipe-header {
-    grid-column-start: 1;
-    grid-column-end: -1;
-    display: flex;
-  }
-  
-  .recipe-header__illo {
-    flex-basis: 500px;
-    flex-shrink: 0;
-    margin-bottom: 0;
-  }
-}
-
-.site-header {
-  max-width: 1140px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  padding: var(--s3) var(--s1);
-}
-
-.site-header__logo {
-  color: var(--color-text);
-}
-
-.site-header__logo:hover {
-  color: var(--color-accent);
-}
-
-.site-header__logo svg {
-  width: 48px;
-  height: 48px;
-  
-}
-
-.site-main-nav {
-  margin-left: auto;
-}
-
-.site-main-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-.site-main-nav ul li:not(:first-child) {
-  margin-left: var(--s1);
-}
-
-.site-main-nav a {
-  text-decoration: none;
-  color: var(--color-text);
-}
-
-.site-main-nav a:hover {
-  text-decoration: underline;
-}
-
-.sr-only {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.site-footer {
-  display: flex;
-  align-items: center;
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: var(--s4) var(--s2);
-}
-
-.site-footer__links {
-  list-style: none;
-  display: flex;
-  margin-left: auto;
-}
-
-.site-footer__links a {
-  color: var(--color-text);
-  text-decoration: none;
-}
-
-.site-footer__links li:not(:first-child) {
-  margin-left: var(--s2);
-}
+@import "variables.css";
+@import "base.css";
+@import "layout.css";
+@import "teaser.css";
+@import "recipe-header.css";
+@import "header.css";
+@import "footer.css";
+@import "recipe-content.css";
+@import "lists.css";
+@import "metadata.css";
+@import "utilities.css";
