--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,7 +1,11 @@
 .wrapper {
-  max-width: 50rem;
+  max-width: 1140px;
   padding: var(--s1);
   margin: 0 auto;
+}
+
+.wrapper--small {
+  max-width: 80ch;
 }
 
 .recipe-layout {
