--- a/src/index.njk
+++ b/src/index.njk
@@ -3,11 +3,24 @@ title: Home
 ---
 {% extends 'layouts/base.njk' %}
 {% from 'recipe-teaser.njk' import recipeTeaser %}
+{% from 'recipe-header.njk' import recipeHeader %}
 
 {% block main %}
 <div class="wrapper">
+  {%- set newestRecipe = collections.recipes | last -%}
+  {{-
+    recipeHeader({
+      title: newestRecipe.data.title,
+      description: newestRecipe.data.description,
+      illo: newestRecipe.data.illo,
+      url: newestRecipe.url
+    })
+  -}}
+</div>
+<div class="wrapper wrapper--small">
   <ol class="plain-list recipe-list">
-    {% for recipe in collections.recipes  | reverse %}
+    {% for recipe in collections.recipes | reverse %}
+    {% if loop.index !== 1 %}
     <li>
       {{-
         recipeTeaser({
@@ -18,6 +31,7 @@ title: Home
         })
       -}}
     </li>
+    {% endif %}
     {% endfor %}
   </ol>
 </div>
