Initial tear down and rebuild

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,15 +1,8 @@
 <header class="site-header">
-  <a href="/" class="site-header__logo">
-    {% include "logo.svg" %}
-    <span class="sr-only">{{ site.title }}</span>
+  <a href="/" class="site-logo">
+    <span class="site-logo__icon">
+      {% include "logo.svg" %}
+    </span>
+    <span class="site-logo__title [ sr-only ]">{{ site.title }}</span>
   </a>
-  <nav class="site-main-nav">
-    <ul>
-    {% for item in site.nav %}
-    <li>
-      <a href="{{ item.url }}">{{ item.text }}</a>
-    </li>
-    {% endfor %}
-    </ul>
-  </nav>
 </header>
