--- a/src/_includes/head-content.njk
+++ b/src/_includes/head-content.njk
@@ -2,5 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>{{ title }} - {{ site.title }}</title>
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700|Source+Serif+Pro:400,700&display=swap" rel="stylesheet">
-<link href="/css/styles.css" rel="stylesheet" type="text/css">
+<link href="/css/global.css" rel="stylesheet" type="text/css">
