--- a/src/_includes/layouts/recipe.njk
+++ b/src/_includes/layouts/recipe.njk
@@ -1,18 +1,20 @@
 {% extends 'layouts/base.njk' %}
-{% from 'recipe-header.njk' import recipeHeader %}
 
 {% block main %}
-  <article class="recipe-layout">
-    {{-
-      recipeHeader({
-        title: title,
-        description: description,
-        illo: illo
-      })
-    -}}
-    {% include "recipe-sidebar.njk" %}
-    <div class="recipe-content">
+  <div class="post">
+    <div class="flow p-y-500">      
+      <h1>{{ title }}</h1>
+      <p>{{ description }}</p>
+      <time>{{ date | dateFormatted }}</time>
+    </div>
+    <div class="post__content [ flow p-y-400 ]">
+      <h2>Ingredients</h2>
+      <ul>
+        {% for ingredient in ingredients %}
+        <li>{{ ingredient }}</li>
+        {% endfor %}
+      </ul>
       {{ content | safe }}
     </div>
-  </article>
+  </div>
 {% endblock %}
