--- a/src/scss/core/_tokens.scss
+++ b/src/scss/core/_tokens.scss
@@ -12,3 +12,5 @@ $sizes: (
 
 $font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $font-serif: 'Georgia', serif;
+
+$breakpoint-1: 46rem;
