--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,117 +1,26 @@
 @use './core/tokens' as *;
 @use "./core/variables" as *;
 @use "modern-css-reset/dist/reset.css";
+@use "./base";
 @use "./utilities/space";
 @use "./utilities/visibility";
+@use "./utilities/flow";
+@use "./components/post";
 @use "./components/site-logo";
 @use "./components/site-header";
+@use "./components/site-footer";
 
-body {
-  background-color: var(--color-background);
-  color: var(--color-text);
-  font-family: $font-serif;
-  line-height: 1.5;
-  font-size: var(--size-100);
-}
-
-h1,
-h2,
-h3,
-h4 {
+.font-sans {
   font-family: $font-sans;
-  line-height: 1.2;
 }
 
-h1 {
-  font-weight: 900;
-}
-
-h1 {
-  font-size: var(--size-400);
-}
-
-h2,
-h3 {
-  font-size: var(--size-200);
-}
-
-h4 {
-  font-size: var(--100);
-}
-
-img {
-  display: block;
-  width: 100%;
-}
-
-figcaption {
-  font-size: var(--size-100);
-  font-style: italic;
-  margin-top: 1rem;
-}
-
-blockquote {
-  padding-left: var(--size-600);
-  border-left: 5px solid;
-  font-style: italic;
-}
-
-hr {
-  height: 1px;
-  border: none;
-  background-color: var(--color-ruler);
-}
-
-time {
-  display: block;
-  font-size: var(--size-100);
-}
-
-@media (min-width: 46rem) {
-  h1 {
-    font-size: var(--size-600);
-  }
-  
-  h2,
-  h3 {
-    font-size: var(--size-400);
-  }
-  
-  p,
-  ul,
-  ol,
-  time {
-    font-size: var(--size-200);
-  }
-}
-
-.flow > * + * {
-  margin-top: var(--flow-space, 1rem);
-}
-
-.post {
-  --flow-space: var(--size-300);
-  width: 90vw;
-  max-width: 80ch;
-  margin-right: auto;
-  margin-left: auto;
-  
-  &__content {
-    border-top: 1px solid var(--color-ruler);
-  }
-}
-
-.post :is(h2, h3, h4) {
-  --flow-space: var(--size-600);
-}
-
-.post :is(h2, h3, h4) + * {
-  --flow-space: var(--size-200);
-}
-
-.post figure,
-.post figure + * {
-  --flow-space: var(--size-600);
+.tag {
+  font-family: $font-sans;
+  display: inline-flex;
+  padding: .25rem .5rem;
+  border: 2px solid var(--color-ruler);
+  border-radius: .5rem;
+  margin-left: var(--size-100);
 }
 
 
